adjust section style to stop navbar covering section headings when following internal links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,7 @@ h2{
     color: var(--highlight-color);
 }
 .section{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /*prevent navbar overlap*/
 }
 
 /* buttons */
